2009-04-16  Ken Werner  <ken.werner@de.ibm.com>

	* libm/libm.texinfo: Add long double function support chapter.
	* libc/include/machine/ieeefp.h: Add _LDBL_EQ_DBL define.
	* libc/include/stdlib.h: Include <machine/ieeefp.h>.
	(strtold, wcstold): Declare.
	* libc/stdlib/strtold.c: New File.
	* libc/stdlib/wcstold.c: Likewise.
	* libc/configure.in: Add long double check.
	* libc/configure: Regenerate.
	* libc/stdlib/Makefile.am: Add strtold.c and wcstold.c.
	* libc/stdlib/Makefile.in: Regenerate.
	* libc/include/math.h (atanl, cosl, sinl, tanl, tanhl): Declare.
	(frexpl, modfl, ceill, fabsl, floorl, log1pl, expm1l, acosl): Ditto.
	(asinl, atan2l, coshl, sinhl, expl, ldexpl, logl, log10l, powl): Ditto.
	(sqrtl, fmodl, hypotl, copysignl, nanl, ilogbl, asinhl, cbrt): Ditto.
	(nextafterl, rintl, scalbnl, exp2l, scalblnl, tgammal): Ditto.
	(nearbyintl, lrintl, llrintl, roundl, lroundl, llround): Ditto.
	(llroundl, truncl, remquol, fdiml, fmaxl, fminl, fmal, acoshl): Ditto.
	(atanhl, remainderl, lgammal, erfl, erfcl): Ditto.
	* libm/common/atanl.c: New File.
	* libm/common/cosl.c: Likewise.
	* libm/common/sinl.c: Likewise.
	* libm/common/modfl.c: Likewise.
	* libm/common/frexpl.c: Likewise.
	* libm/common/tanhl.c: Likewise.
	* libm/common/tanl.c: Likewise.
	* libm/common/expm1l.c: Likewise.
	* libm/common/log1pl.c: Likewise.
	* libm/common/ceill.c: Likewise.
	* libm/common/fabsl.c: Likewise.
	* libm/common/floorl.c: Likewise.
	* libm/common/acosl.c: Likewise.
	* libm/common/asinl.c: Likewise.
	* libm/common/atan2l.c: Likewise.
	* libm/common/coshl.c: Likewise.
	* libm/common/expl.c: Likewise.
	* libm/common/fmodl.c: Likewise.
	* libm/common/hypotl.c: Likewise.
	* libm/common/ldexpl.c: Likewise.
	* libm/common/log10l.c: Likewise.
	* libm/common/logl.c: Likewise.
	* libm/common/powl.c: Likewise.
	* libm/common/sqrtl.c: Likewise.
	* libm/common/copysignl.c: Likewise.
	* libm/common/ilogbl.c: Likewise.
	* libm/common/nanl.c: Likewise.
	* libm/common/cbrtl.c: Likewise.