@@ -1,3 +1,7 @@
+2009-04-16  Hans-Peter Nilsson  <hp@axis.com>
+
+	* libc/include/stdint.h (INTPTR_MIN, INTPTR_MAX, UINTPTR_MAX): Define.
+
 2009-04-16  Ken Werner  <ken.werner@de.ibm.com>
 
 	* libm/libm.texinfo: Add long double function support chapter.
@@ -270,8 +274,8 @@
 	* libm/common/Makefile.am: Add s_llround.c (src); sf_llround.c (fsrc); 
 	s_fdim.def, s_fma.def, s_fmax.def, s_fmin.def,
 	s_logb.def, s_lrint.def, s_lround.def, s_nearbyint.def, s_remquo.def,
-        s_rint.def, s_round.def, s_signbit.def, s_trunc.def, and
-        isgreater.def (chobj);
+	s_rint.def, s_round.def, s_signbit.def, s_trunc.def, and
+	isgreater.def (chobj);
 	re-name all existing chew files (chobj) to match source file base
 	names (put in underscores), delete all special targets for chew files
 	(leaving all to be generated by rule).
